--- a/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_edit_profile.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ProfileFragment"
-    android:background="@color/white">
+    android:background="@color/blue_100">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -19,10 +19,10 @@
                 android:id="@+id/profileView"
                 android:layout_width="136dp"
                 android:layout_height="136dp"
-                android:layout_marginTop="64dp"
+                android:layout_marginTop="50dp"
                 android:src="@drawable/profileicon"
-                app:civ_border_width="2dp"
                 app:civ_border_color="@color/white"
+                app:civ_border_width="2dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -69,7 +69,7 @@
                         android:layout_width="35dp"
                         android:layout_height="35dp"
                         android:src="@drawable/user"
-                        app:tint="@color/teal_200" />
+                        app:tint="@color/teal_700" />
 
 
                     <EditText
@@ -109,7 +109,7 @@
                         android:layout_width="35dp"
                         android:layout_height="35dp"
                         android:src="@drawable/birthday"
-                        app:tint="@color/teal_200" />
+                        app:tint="@color/teal_700" />
 
 
                     <EditText
@@ -148,7 +148,7 @@
                         android:layout_width="35dp"
                         android:layout_height="35dp"
                         android:src="@drawable/phone"
-                        app:tint="@color/teal_200" />
+                        app:tint="@color/teal_700" />
 
                     <EditText
                         android:id="@+id/phoneNumberTV"
@@ -186,7 +186,7 @@
                         android:layout_width="35dp"
                         android:layout_height="35dp"
                         android:src="@drawable/email"
-                        app:tint="@color/teal_200" />
+                        app:tint="@color/teal_700" />
 
                     <EditText
                         android:id="@+id/emailTV"
@@ -230,14 +230,14 @@
 
             <Button
                 android:id="@+id/BtnUpdateProfile"
-                android:layout_width="358dp"
-                android:layout_height="38dp"
+                android:layout_width="150dp"
+                android:layout_height="42dp"
+                android:layout_marginStart="225dp"
                 android:layout_marginTop="24dp"
+                android:layout_marginBottom="48dp"
                 android:background="@drawable/button"
                 android:text="Update"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.444"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
