--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,8 @@
     <color name="blue_100">#BBDEFB</color>
     <color name="green_900">#1B5E20</color>
     <color name="very_light_green">#F1FFFD</color>
+    <color name="azureish_white">#D1E5F4</color>
+    <color name="very_light_blue">#E4F6F8</color>
     <color name="light_blue_600">#FF039BE5</color>
     <color name="light_blue_900">#FF01579B</color>
     <color name="light_blue_A200">#FF40C4FF</color>
