--- a/app/src/main/res/layout/fragment_profile_enhanced_survey.xml
+++ b/app/src/main/res/layout/fragment_profile_enhanced_survey.xml
@@ -1,136 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
-    tools:context=".ProfileEnhancedSurveyFragment">
+    android:background="@color/blue_100"
+    tools:context=".quiz.QuizFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+    <ImageView
+        android:id="@+id/imageView12"
+        android:layout_width="339dp"
+        android:layout_height="177dp"
+        android:layout_marginTop="168dp"
+        android:src="@drawable/profile_enhanced"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <!--        Remove the back button because redundant-->
-
-
-        <TextView
-            android:id="@+id/textView8"
-            android:layout_width="330dp"
-            android:layout_height="41dp"
-            android:layout_marginTop="70dp"
-            android:gravity="start"
-            android:text="Do you believe that climate change is a significant global issue?"
-            android:textSize="15dp"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.641"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <RadioGroup
-            android:id="@+id/radioGroup"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.281"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView8"
-            app:layout_constraintVertical_bias="0.039">
-
-            <RadioButton
-                android:id="@+id/radioButton2"
-                android:layout_width="152dp"
-                android:layout_height="20dp"
-                android:text="Yes" />
-
-            <RadioButton
-                android:id="@+id/radioButton3"
-                android:layout_width="152dp"
-                android:layout_height="20dp"
-                android:text="No" />
-
-        </RadioGroup>
-
-        <TextView
-            android:id="@+id/textView9"
-            android:layout_width="339dp"
-            android:layout_height="40dp"
-            android:layout_marginTop="16dp"
-            android:text="How well-informed do you feel about your local environmental policies?"
-            android:textSize="15dp"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.722"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
-
-        <TextView
-            android:id="@+id/textView10"
-            android:layout_width="339dp"
-            android:layout_height="28dp"
-            android:layout_marginTop="20dp"
-            android:text="Are you familiar with the term carbon footprint?"
-            android:textSize="15dp"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.722"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editText" />
-
-        <EditText
-            android:id="@+id/editText"
-            android:layout_width="276dp"
-            android:layout_height="101dp"
-            android:layout_marginTop="20dp"
-            android:background="@drawable/rounded_edittext_bg"
-            android:gravity="top|left"
-            android:hint="Your Answer"
-            android:inputType="textMultiLine"
-            android:lines="5"
-            android:maxLines="10"
-            android:paddingStart="10dp"
-            android:paddingTop="10dp"
-            android:textSize="15dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.54"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView9" />
-
-        <EditText
-            android:id="@+id/editText2"
-            android:layout_width="276dp"
-            android:layout_height="101dp"
-            android:layout_marginTop="16dp"
-            android:background="@drawable/rounded_edittext_bg"
-            android:gravity="top|left"
-            android:hint="Your Answer"
-            android:inputType="textMultiLine"
-            android:lines="5"
-            android:maxLines="10"
-            android:paddingStart="10dp"
-            android:paddingTop="10dp"
-            android:textSize="15dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.54"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView10" />
-
-        <Button
-            android:id="@+id/BtnSubmitEnhancedSurvey"
-            android:layout_width="95dp"
-            android:layout_height="40dp"
-            android:layout_marginTop="20dp"
-            android:background="@drawable/button"
-            android:text="Submit"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.805"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editText2" />
+    <Button
+        android:id="@+id/BtnStartQuiz"
+        android:layout_width="170dp"
+        android:layout_height="65dp"
+        android:layout_marginTop="452dp"
+        android:backgroundTint="@color/blue_900"
+        android:text="Start Survey"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.56"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
