--- a/app/src/main/res/layout/fragment_forgotpassword.xml
+++ b/app/src/main/res/layout/fragment_forgotpassword.xml
@@ -7,20 +7,33 @@
     tools:context=".forgotpassword">
 
     <TextView
-        android:id="@+id/ecohelpertext2"
-        android:layout_width="411dp"
-        android:layout_height="147dp"
-        android:background="#03A9F4"
+        android:id="@+id/ecohelpertext"
+        android:layout_width="match_parent"
+        android:layout_height="190dp"
+        android:background="@color/very_light_blue"
         android:fontFamily="@font/judsonitalic"
-        android:gravity="center"
+        android:gravity="bottom"
+        android:paddingBottom="20dp"
         android:text="EcoHelper"
         android:textAlignment="center"
         android:textAllCaps="false"
-        android:textColor="#5E35B1"
+        android:textColor="@color/black"
         android:textDirection="inherit"
         android:textIsSelectable="false"
-        android:textSize="48sp"
+        android:textSize="44sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageView6"
+        android:layout_width="117dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="16dp"
+        android:src="@drawable/ecohelper_logo"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -77,12 +90,12 @@
         android:layout_width="85dp"
         android:layout_height="60dp"
         android:layout_marginStart="163dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="64dp"
         android:layout_marginEnd="163dp"
         android:background="#03A9F4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ecohelpertext2"
+        app:layout_constraintTop_toBottomOf="@+id/ecohelpertext"
         app:srcCompat="@android:drawable/stat_sys_warning" />
 
     <Button
@@ -102,12 +115,11 @@
         android:id="@+id/BtnBTL"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="137dp"
-        android:layout_marginEnd="138dp"
         android:layout_marginBottom="47dp"
         android:background="#F9F9F9"
         android:text="Back to Login"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
