--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -7,48 +7,49 @@
     tools:context=".LoginFragment">
 
     <TextView
-        android:id="@+id/dots1"
-        android:layout_width="191dp"
-        android:layout_height="19dp"
-        android:layout_marginStart="9dp"
-        android:layout_marginBottom="25dp"
-        android:text="- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -"
-        app:layout_constraintBottom_toTopOf="@+id/CNABtn"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView" />
-
-    <TextView
         android:id="@+id/ecohelpertext"
-        android:layout_width="411dp"
-        android:layout_height="147dp"
-        android:background="#03A9F4"
+        android:layout_width="match_parent"
+        android:layout_height="190dp"
+        android:background="@color/very_light_blue"
         android:fontFamily="@font/judsonitalic"
-        android:gravity="center"
+        android:gravity="bottom"
+        android:paddingBottom="20dp"
         android:text="EcoHelper"
         android:textAlignment="center"
         android:textAllCaps="false"
-        android:textColor="#5E35B1"
+        android:textColor="@color/black"
         android:textDirection="inherit"
         android:textIsSelectable="false"
-        android:textSize="48sp"
+        android:textSize="44sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <ImageView
+        android:id="@+id/imageView6"
+        android:layout_width="117dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="16dp"
+        android:src="@drawable/ecohelper_logo"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <Button
         android:id="@+id/CNABtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="128dp"
-        android:layout_marginEnd="129dp"
+        android:layout_width="120dp"
+        android:layout_height="57dp"
         android:layout_marginBottom="65dp"
         android:background="#03A9F4"
         android:foregroundTint="#03A9F4"
-        android:text="Create New Account"
-        android:textColor="#4A148C"
+        android:text="Sign Up"
+        android:textColor="#5E35B1"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
@@ -70,26 +71,25 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="199dp"
-        android:layout_marginEnd="199dp"
         android:layout_marginBottom="25dp"
         android:text="or"
         app:layout_constraintBottom_toTopOf="@+id/CNABtn"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintEnd_toStartOf="@+id/dots1"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/dots2" />
 
     <Button
         android:id="@+id/fgtBtn"
-        android:layout_width="154dp"
+        android:layout_width="180dp"
         android:layout_height="48dp"
         android:layout_marginStart="148dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="24dp"
         android:layout_marginEnd="148dp"
         android:backgroundTint="@color/white"
         android:text="Forgot password?"
         android:textAllCaps="false"
         android:textColor="#DA1D1D"
-        android:textSize="12sp"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.505"
         app:layout_constraintStart_toStartOf="parent"
@@ -135,5 +135,16 @@
         app:layout_constraintBottom_toTopOf="@+id/CNABtn"
         app:layout_constraintEnd_toStartOf="@+id/textView"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/dots1"
+        android:layout_width="191dp"
+        android:layout_height="19dp"
+        android:layout_marginStart="9dp"
+        android:layout_marginBottom="25dp"
+        android:text="- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -"
+        app:layout_constraintBottom_toTopOf="@+id/CNABtn"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/textView" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
