modify the api, chenge the theme to Them.Material3DayNight else it bottom navigation bar become black

--- a/app/src/main/res/layout/news_recycler_row.xml
+++ b/app/src/main/res/layout/news_recycler_row.xml
@@ -1,47 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_margin="12dp"
     android:elevation="4dp">
 
     <LinearLayout
-        android:layout_width="207dp"
-        android:layout_height="210dp"
-        android:gravity="top"
-        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
         android:padding="4dp">
 
         <ImageView
             android:id="@+id/article_image_view"
-            android:layout_width="207dp"
-            android:layout_height="139dp"
-            android:scaleType="fitXY" />
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:scaleType="centerCrop" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="30dp"
-            android:layout_marginTop="15dp"
-            android:orientation="vertical"
-            android:gravity="center_horizontal">
+            android:layout_marginStart="20dp"
+            android:orientation="vertical">
 
             <TextView
-                android:id="@+id/organiation_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                android:maxLines="3"
-                android:textColor="@color/black"
                 android:textSize="16sp"
+                android:textColor="@color/black"
                 android:textStyle="bold"
-                tools:text="This is the title" />
+                android:maxLines="3"
+                tools:Text ="This is the title"
+                android:layout_marginBottom ="8dp"
+                android:id ="@+id/organiation_name"/>
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="12sp"
-                android:layout_marginLeft="50dp"
+                android:layout_marginBottom ="8dp"
                 tools:text="source"
                 android:id="@+id/article_source"/>
         </LinearLayout>
