--- a/app/src/main/res/layout/fragment_feedback.xml
+++ b/app/src/main/res/layout/fragment_feedback.xml
@@ -94,9 +94,9 @@
                 android:background="@drawable/button"
                 android:text="Submit"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.908"
+                app:layout_constraintHorizontal_bias="0.86"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/imageButton" />
+                app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
             <TextView
                 android:id="@+id/textView11"
@@ -115,15 +115,28 @@
 
             <ImageButton
                 android:id="@+id/imageButton"
-                android:layout_width="324dp"
-                android:layout_height="174dp"
-                android:layout_marginTop="36dp"
-                android:background="@drawable/rounded_button"
+                android:layout_width="80dp"
+                android:layout_height="60dp"
+                android:layout_marginTop="24dp"
+                android:background="@android:color/transparent"
+                android:scaleType="fitCenter"
                 android:src="@drawable/picture_upload"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.494"
+                app:layout_constraintHorizontal_bias="0.498"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/ETFeedback" />
+
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="308dp"
+                android:layout_height="181dp"
+                android:layout_marginTop="4dp"
+                android:src="@drawable/image_selected"
+                android:scaleType="fitXY"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.533"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/imageButton" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
