--- a/app/src/main/res/layout/fragment_dest_certificate.xml
+++ b/app/src/main/res/layout/fragment_dest_certificate.xml
@@ -7,6 +7,19 @@
     tools:context=".DestCertificate">
 
     <!-- TODO: Update blank fragment layout -->
+
+    <Button
+        android:id="@+id/BtnDownload"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:backgroundTint="@color/blue_900"
+        android:text="Download"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="@+id/imageView"
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="0dp"
@@ -32,15 +45,14 @@
         app:layout_constraintVertical_bias="0.6" />
 
     <Button
-        android:id="@+id/BtnDownload"
+        android:id="@+id/BtnBack"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="48dp"
+        android:layout_marginBottom="44dp"
         android:backgroundTint="@color/blue_900"
-        android:text="Download"
+        android:text="Back to Home Carbong Footprint"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="@+id/imageView"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
