edit text in cf

--- a/app/src/main/res/layout/fragment_thrid_question_calculate_cf.xml
+++ b/app/src/main/res/layout/fragment_thrid_question_calculate_cf.xml
@@ -13,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
-        android:text="Track Your Carbon Footprint"
+        android:text="Track Your Monthly Carbon Footprint"
         android:textColor="#000000"
         android:textSize="24sp"
         android:textStyle="bold"
@@ -69,7 +69,7 @@
             android:layout_gravity="top"
             android:layout_marginStart="50dp"
             android:layout_marginTop="30dp"
-            android:text="Amount spent in RM"
+            android:text="Amount spent for food in RM"
             android:textColor="#000000"
             android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
