--- a/app/src/main/res/layout/fragment_carbonfootprint.xml
+++ b/app/src/main/res/layout/fragment_carbonfootprint.xml
@@ -15,7 +15,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
-        android:text="Track Your Carbon Footprint"
+        android:text="Track Your Monthly Carbon Footprint"
         android:textColor="#000000"
         android:textSize="24sp"
         android:textStyle="bold"
