--- a/app/src/main/res/layout/fragment_forgotpassword.xml
+++ b/app/src/main/res/layout/fragment_forgotpassword.xml
@@ -50,7 +50,7 @@
         android:hint="Enter email address"
         android:inputType="text"
         android:textAlignment="center"
-        android:textColor="#E4DADA"
+        android:textColor="#190D0D"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
