--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,7 @@
             android:id="@+id/TBMainAct"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#F1FAE9"
+            android:background="#FFFFFF"
             android:minHeight="?attr/actionBarSize"
             app:title="Reforestation" />
 
