--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -48,21 +48,24 @@
                 android:layout_width="71dp"
                 android:layout_height="68dp"
                 android:layout_marginEnd="32dp"
+                android:src="@drawable/default_profile_img"
+                app:civ_border_color="@color/white"
+                app:civ_border_width="1dp"
                 app:layout_constraintBottom_toBottomOf="@+id/imageView5"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/imageView5"
                 app:layout_constraintVertical_bias="0.407"
-                app:srcCompat="@drawable/profile" />
+                app:srcCompat="@drawable/default_profile_img" />
 
             <TextView
                 android:id="@+id/textView4"
-                android:layout_width="52dp"
-                android:layout_height="32dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="36dp"
-                android:layout_marginTop="68dp"
+                android:layout_marginTop="88dp"
                 android:text="Hello"
                 android:textColor="#ffffff"
-                android:textSize="20sp"
+                android:textSize="23sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/imageView5" />
@@ -71,11 +74,11 @@
                 android:id="@+id/textView5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="52dp"
-                android:layout_marginTop="72dp"
+                android:layout_marginStart="112dp"
+                android:layout_marginTop="56dp"
                 android:text="username"
                 android:textColor="#ffffff"
-                android:textSize="25sp"
+                android:textSize="23sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="@+id/imageView5"
                 app:layout_constraintTop_toTopOf="parent" />
