--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -14,7 +14,8 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:paddingBottom="48dp">
 
             <!--            <ImageButton-->
             <!--                android:id="@+id/imageButton5"-->
@@ -34,7 +35,7 @@
                 android:layout_width="136dp"
                 android:layout_height="136dp"
                 android:layout_marginTop="4dp"
-                android:src="@drawable/profileicon"
+                android:src="@drawable/default_profile_img"
                 app:civ_border_color="@color/white"
                 app:civ_border_width="2dp"
                 app:layout_constraintBottom_toBottomOf="@id/ProfileEnhancedTV"
