--- a/app/src/main/res/layout/fragment_profile_enhanced_survey.xml
+++ b/app/src/main/res/layout/fragment_profile_enhanced_survey.xml
@@ -9,9 +9,9 @@
 
     <ImageView
         android:id="@+id/imageView12"
-        android:layout_width="339dp"
-        android:layout_height="177dp"
-        android:layout_marginTop="168dp"
+        android:layout_width="205dp"
+        android:layout_height="175dp"
+        android:layout_marginTop="92dp"
         android:src="@drawable/profile_enhanced"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -21,30 +21,28 @@
         android:id="@+id/BtnStartQuiz"
         android:layout_width="170dp"
         android:layout_height="65dp"
+        android:layout_marginTop="92dp"
         android:backgroundTint="@color/blue_900"
-        android:text="Start Survey"
+        android:text="Take Survey"
         android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.633" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView12" />
 
     <Button
         android:id="@+id/btnBackProfile"
         android:layout_width="216dp"
         android:layout_height="62dp"
+        android:layout_marginTop="32dp"
         android:backgroundTint="@color/blue_900"
-        android:text="Back to Profile PAGE"
-        android:textSize="18sp"
+        android:text="Back to Profile Page"
         android:textColor="@color/white"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/BtnStartQuiz"
-        app:layout_constraintVertical_bias="0.258" />
+        app:layout_constraintTop_toBottomOf="@+id/BtnStartQuiz" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
