--- a/app/src/main/res/layout/fragment_profile_enhanced_survey_question.xml
+++ b/app/src/main/res/layout/fragment_profile_enhanced_survey_question.xml
@@ -14,7 +14,7 @@
         android:id="@+id/TVQuestion"
         android:layout_width="370dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="128dp"
+        android:layout_marginTop="110dp"
         android:gravity="center"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
@@ -44,10 +44,11 @@
             android:id="@+id/option1"
             android:layout_width="350dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="10dp"
+            android:textSize="16sp"
             android:text="Option 1"
-            android:backgroundTint="@color/blue_700"
-            android:textColor="@color/black"
+            android:backgroundTint="@color/teal_700"
+            android:textColor="@color/white"
             tools:layout_editor_absoluteX="163dp"
             tools:layout_editor_absoluteY="205dp" />
 
@@ -56,9 +57,11 @@
             android:layout_width="350dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
+            android:padding="12dp"
+            android:textSize="16sp"
             android:text="Option 2"
-            android:backgroundTint="@color/blue_700"
-            android:textColor="@color/black"
+            android:backgroundTint="@color/teal_700"
+            android:textColor="@color/white"
             tools:layout_editor_absoluteX="162dp"
             tools:layout_editor_absoluteY="262dp" />
 
@@ -67,9 +70,11 @@
             android:layout_width="350dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
+            android:padding="12dp"
+            android:textSize="16sp"
             android:text="Option 3"
-            android:backgroundTint="@color/blue_700"
-            android:textColor="@color/black"
+            android:backgroundTint="@color/teal_700"
+            android:textColor="@color/white"
             tools:layout_editor_absoluteX="160dp"
             tools:layout_editor_absoluteY="350dp" />
 
@@ -78,9 +83,11 @@
             android:layout_width="350dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
+            android:padding="12dp"
+            android:textSize="16sp"
             android:text="Option 4"
-            android:backgroundTint="@color/blue_700"
-            android:textColor="@color/black"
+            android:backgroundTint="@color/teal_700"
+            android:textColor="@color/white"
             tools:layout_editor_absoluteX="162dp"
             tools:layout_editor_absoluteY="419dp" />
 
@@ -107,7 +114,7 @@
         android:layout_marginTop="48dp"
         android:backgroundTint="@color/blue_900"
         android:text="Submit"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
